// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SlideRenderer > SlideFrame統合後のDOM構造（属性スナップショット） > test-bleed が section > .master-body の共通構造を持ち、スナップショットと一致する 1`] = `
"section.slide-container
  div.master-layer-back
  div.master-body.bleed-image-layout
    div.bleed-content
    div._terminal-window_2e7c2d.MuiBox-root.css-0
  div.master-layer-front
"
`;

exports[`SlideRenderer > SlideFrame統合後のDOM構造（属性スナップショット） > test-custom が section > .master-body の共通構造を持ち、スナップショットと一致する 1`] = `
"section.slide-container
  div.master-layer-back
  div.master-body
    div._terminal-window_2e7c2d.MuiBox-root.css-0
  div.master-layer-front
"
`;

exports[`SlideRenderer > SlideFrame統合後のDOM構造（属性スナップショット） > test-section が section > .master-body の共通構造を持ち、スナップショットと一致する 1`] = `
"section.slide-container
  div.master-layer-back
  div.master-body
    div.section-title-layout.MuiBox-root.css-0
  div.master-layer-front
"
`;

exports[`SlideRenderer > SlideFrame統合後のDOM構造（属性スナップショット） > test-steps が section > .master-body の共通構造を持ち、スナップショットと一致する 1`] = `
"section.slide-container
  div.master-layer-back
  div.master-body
    h2.MuiTypography-root.MuiTypography-h2.slide-title.css-7bs1js-MuiTypography-root
    div.content-area.MuiBox-root.css-0
  div.master-layer-front
"
`;

exports[`SlideRenderer > SlideFrame統合後のDOM構造（属性スナップショット） > test-tiles が section > .master-body の共通構造を持ち、スナップショットと一致する 1`] = `
"section.slide-container
  div.master-layer-back
  div.master-body
    h2.MuiTypography-root.MuiTypography-h2.slide-title.css-7bs1js-MuiTypography-root
    div.content-area.MuiBox-root.css-0
  div.master-layer-front
"
`;

exports[`SlideRenderer > SlideFrame統合後のDOM構造（属性スナップショット） > test-title が section > .master-body の共通構造を持ち、スナップショットと一致する 1`] = `
"section.slide-container
  div.master-layer-back
  div.master-body
    div.title-layout.MuiBox-root.css-0
  div.master-layer-front
"
`;

exports[`SlideRenderer > SlideFrame統合後のDOM構造（属性スナップショット） > test-two-column が section > .master-body の共通構造を持ち、スナップショットと一致する 1`] = `
"section.slide-container
  div.master-layer-back
  div.master-body
    h2.MuiTypography-root.MuiTypography-h2.slide-title.css-7bs1js-MuiTypography-root
    div.content-area.MuiBox-root.css-0
  div.master-layer-front
"
`;
